[package]
name = "tilde-expand"
version = "0.1.1"
authors = ["sp3d"]
include = ["src/*", "src/**/*", "README", "Cargo.toml"]
description = "perform shell-style tilde expansion of home directories in paths"
repository = "https://github.com/sp3d/tilde-expand-rs"
readme = "README"
keywords = ["unix", "tilde", "home", "shell"]
license = "WTFPL"

[dependencies]
libc = "0.2.7"
